--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^6.2.2",
     "native-base": "^3.4.13",
     "react": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "^0.70.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "3.3.2",
