--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "native-base": "^3.4.13",
-    "react": "18.0.0",
-    "react-native": "^0.70.0",
+    "react": "18.1.0",
+    "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "3.3.2",
