--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.15.0",
-    "react-native-svg": "12.1.1"
+    "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
